--- a/source/style/widget-header.scss
+++ b/source/style/widget-header.scss
@@ -1,5 +1,5 @@
 .header-widget {
-  position: sticky;
+  position: fixed;
   top: 0;
   left: 0;
   z-index: 100;
